# ai

./: README.md
java/mcp/bookstore/: README.md  pom.xml  prompts.md
java/mcp/bookstore/src/main/java/com/mcp/bookstore/: BookstoreApplication.java
java/mcp/bookstore/src/main/resources/: application.properties  books.json
java/mcp/bookstore/src/test/java/com/mcp/bookstore/: BookstoreApplicationTests.java
python/: README.md
python/mcp/: books.json
python/mcp/bookstore-py/: .project  README.md  prompts.md  pyproject.toml
python/mcp/bookstore-py/src/bookstore_py/: __init__.py  main.py  mcp_book_server.py
python/mcp/bookstore-py/src/bookstore_py/data/: book.py  books.json
python/mcp/bookstore-py/src/bookstore_py/service/: book_service.py  mcp_book_service.py
python/mcp/bookstore-py/src/bookstore_py/util/: book_reader.py  book_repository.py
python/mcp/bookstore-py/test/: conftest.py
python/mcp/bookstore-py/test/bookstore_py/: test_book_reader.py
python/mcp/bookstore-py/test/bookstore_py/service/: test_book_service.py
python/mcp/bookstore-py/test/bookstore_py/util/: test_book_repository.py
python/mcp/mcp-bookstore/: .project  prompts.md  pyproject.toml
python/mcp/mcp-bookstore/src/mcp_bookstore/: __init__.py  book_server.py  main.py
python/mcp/mcp-bookstore/src/mcp_bookstore/data/: book.py  books.json
python/mcp/mcp-bookstore/src/mcp_bookstore/service/: book_service.py  mcp_book_server.py
python/mcp/mcp-bookstore/src/mcp_bookstore/utils/: book_reader.py  book_repository.py
python/mcp/mcp-bookstore/test/: conftest.py  test_book_reader.py  test_book_repository.py  test_book_service.py
(+6 files in other folders)
