[project]
name = "bookstore-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dchen10001", email = "david.chen2@nice.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
bookstore-py = "bookstore_py:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
